--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      This project was coded by Alba Perez Mejias and is
+      <a href="https://github.com/albapma/trialtest">open source on GitHub</a>
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
