--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     </div>
     <footer>
       This project was coded by Alba Perez Mejias and is
-      <a href="https://github.com/albapma/trialtest">open source on GitHub</a>
+      <a href="https://github.com/albapma/trialtest" target="_blank"
+        >open source on GitHub</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
