--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         </div>
       </div>
     </div>
-    <footer>
+    <small>
       This project was coded by Alba Perez Mejias and is
       <a href="https://github.com/albapma/trialtest" target="_blank"
         >open source on GitHub</a
       >
-    </footer>
+    </small>
     <script src="src/index.js"></script>
   </body>
 </html>
