--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
           </button>
         </div>
       </div>
+      <h1 id="city">Cordoba</h1>
 
       <div class="row">
         <div class="col-4">
           <ul>
-            <li id="city">Cordoba</li>
             <li id="date">Wednesday 16:00</li>
             <li id="weather-description">Cloudy</li>
           </ul>
         </div>
-
+         <div class="d-flex weather-temperature">
+          <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="description" id="icon"/>
         <div class="col-6">
           <p id="degrees">20 <span> °C </span></p>
         </div>
