--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
          <div class="d-flex weather-temperature">
           <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="description" id="icon"/>
         <div class="col-6">
-          <p id="degrees">20 <span> °C </span></p>
+          <strong id="degrees">20 </strong>
+            <span class="units"> <a href="#" id="celsius" class="active">°C</a>|</span> <a href="#" id="fahrenheit"> °F </a>
         </div>
       </div>
     </div>
