wind and humidity added

--- a/index.html
+++ b/index.html
@@ -37,17 +37,31 @@
       <h1 id="city">Cordoba</h1>
 
       <div class="row">
-        <div class="col-4">
+        <div class="col-6">
           <ul>
             <li id="date">Wednesday 16:00</li>
             <li id="weather-description">Cloudy</li>
           </ul>
         </div>
-         <div class="d-flex weather-temperature">
-          <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="description" id="icon"/>
+        <div class="col-6">
+          <ul>
+            <li>Wind: <span id="wind"></span> km/h</li>
+            <li>Humidity: <span id="humidity"></span> %</li>
+          </ul>
+        </div>
+      </div>
+      <div class="d-flex weather-temperature">
+        <img
+          src="http://openweathermap.org/img/wn/10d@2x.png"
+          alt="description"
+          id="icon"
+        />
         <div class="col-6">
           <strong id="degrees">20 </strong>
-            <span class="units"> <a href="#" id="celsius" class="active">°C</a>|</span> <a href="#" id="fahrenheit"> °F </a>
+          <span class="units">
+            <a href="#" id="celsius" class="active">°C</a>|</span
+          >
+          <a href="#" id="fahrenheit"> °F </a>
         </div>
       </div>
     </div>
