--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
           >
           <a href="#" id="fahrenheit"> °F </a>
         </div>
+        <br />
+        <div class="forecast">
+          <div class="row">
+            <div class="col-2">
+              Thursday
+              <img
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt=""
+                width="38"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <small>
