--- a/index.html
+++ b/index.html
@@ -68,24 +68,23 @@
           alt="description"
           id="icon"
         />
-        <div class="col-6">
+        <div class="temperature-info">
           <strong id="degrees">20 </strong>
           <span class="units">
             <a href="#" id="celsius" class="active">°C</a>|</span
           >
           <a href="#" id="fahrenheit"> °F </a>
         </div>
-        <br />
-        <div class="forecast">
-          <div class="row">
-            <div class="col-2">
-              Thursday
-              <img
-                src="http://openweathermap.org/img/wn/10d@2x.png"
-                alt=""
-                width="38"
-              />
-            </div>
+      </div>
+      <div class="forecast">
+        <div class="row">
+          <div class="col-2">
+            Thursday
+            <img
+              src="http://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              width="38"
+            />
           </div>
         </div>
       </div>
