--- a/index.html
+++ b/index.html
@@ -76,15 +76,19 @@
           <a href="#" id="fahrenheit"> °F </a>
         </div>
       </div>
-      <div class="forecast">
+      <div class="forecast" id="forecast">
         <div class="row">
           <div class="col-2">
             Thursday
             <img
               src="http://openweathermap.org/img/wn/10d@2x.png"
               alt=""
-              width="38"
+              width="45"
             />
+            <div class="forecast-degrees">
+              <span class="maximum">19°</span>
+              <span class="minimum">13°</span>
+            </div>
           </div>
         </div>
       </div>
