--- a/index.html
+++ b/index.html
@@ -70,28 +70,10 @@
         />
         <div class="temperature-info">
           <strong id="degrees">20 </strong>
-          <span class="units">
-            <a href="#" id="celsius" class="active">°C</a>|</span
-          >
-          <a href="#" id="fahrenheit"> °F </a>
+          <span class="units" id="celsius">°C </span>
         </div>
       </div>
-      <div class="forecast" id="forecast">
-        <div class="row">
-          <div class="col-2">
-            Thursday
-            <img
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-              alt=""
-              width="45"
-            />
-            <div class="forecast-degrees">
-              <span class="maximum">19°</span>
-              <span class="minimum">13°</span>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="forecast" id="forecast"></div>
     </div>
     <small>
       This project was coded by Alba Perez Mejias and is
